--- a/report.html
+++ b/report.html
@@ -25,7 +25,7 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="report_files/libs/clipboard/clipboard.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script><script src="report_files/libs/clipboard/clipboard.min.js"></script>
 <script src="report_files/libs/quarto-html/quarto.js" type="module"></script>
 <script src="report_files/libs/quarto-html/tabsets/tabsets.js" type="module"></script>
 <script src="report_files/libs/quarto-html/axe/axe-check.js" type="module"></script>
@@ -37,6 +37,9 @@ ul.task-list li input[type="checkbox"] {
 <script src="report_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="report_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="report_files/libs/bootstrap/bootstrap-d6a003b94517c951b2d65075d42fb01b.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<script src="https://cdn.jsdelivr.net/npm/requirejs@2.3.6/require.min.js" integrity="sha384-c9c+LnTbwQ3aujuU7ULEPVvgLs+Fn6fJUvIGTsuu1ZcCf11fiEubah0ttpca4ntM sha384-6V1/AdqZRWk1KAlWbKBlGhN7VG4iE/yAZcO6NZPMF8od0vukrvr0tg4qY6NSrItx" crossorigin="anonymous"></script>
+
+<script type="application/javascript">define('jquery', [],function() {return window.jQuery;})</script>
 
 
 </head>
@@ -85,6 +88,316 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="load-data" class="level1">
 <h1>Load Data</h1>
+<div id="5fb5566d" class="cell" data-execution_count="1">
+<div class="cell-output cell-output-display" data-execution_count="1">
+<div>
+
+
+<table class="dataframe caption-top table table-sm table-striped small" data-border="1">
+<thead>
+<tr class="header">
+<th data-quarto-table-cell-role="th"></th>
+<th data-quarto-table-cell-role="th">country</th>
+<th data-quarto-table-cell-role="th">inflation_rate</th>
+<th data-quarto-table-cell-role="th">exports_gdp_share</th>
+<th data-quarto-table-cell-role="th">gdp_growth_rate</th>
+<th data-quarto-table-cell-role="th">gdp_per_capita</th>
+<th data-quarto-table-cell-role="th">adult_literacy_rate</th>
+<th data-quarto-table-cell-role="th">primary_school_enrolment_rate</th>
+<th data-quarto-table-cell-role="th">education_expenditure_gdp_share</th>
+<th data-quarto-table-cell-role="th">measles_immunisation_rate</th>
+<th data-quarto-table-cell-role="th">health_expenditure_gdp_share</th>
+<th data-quarto-table-cell-role="th">income_inequality</th>
+<th data-quarto-table-cell-role="th">unemployment_rate</th>
+<th data-quarto-table-cell-role="th">life_expectancy</th>
+<th data-quarto-table-cell-role="th">total_population</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">0</th>
+<td>Afghanistan</td>
+<td>NaN</td>
+<td>18.380042</td>
+<td>-6.240172</td>
+<td>352.603733</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>68.0</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>14.100</td>
+<td>62.879</td>
+<td>41128771.0</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">1</th>
+<td>Albania</td>
+<td>6.725203</td>
+<td>37.395422</td>
+<td>4.856402</td>
+<td>6810.114041</td>
+<td>98.5</td>
+<td>95.606712</td>
+<td>2.74931</td>
+<td>86.0</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>11.588</td>
+<td>76.833</td>
+<td>2777689.0</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">2</th>
+<td>Algeria</td>
+<td>9.265516</td>
+<td>31.446856</td>
+<td>3.600000</td>
+<td>5023.252932</td>
+<td>NaN</td>
+<td>108.343933</td>
+<td>NaN</td>
+<td>79.0</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>12.437</td>
+<td>77.129</td>
+<td>44903225.0</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">3</th>
+<td>American Samoa</td>
+<td>NaN</td>
+<td>46.957520</td>
+<td>1.735016</td>
+<td>19673.390102</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>44273.0</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">4</th>
+<td>Andorra</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>9.563798</td>
+<td>42350.697069</td>
+<td>NaN</td>
+<td>90.147346</td>
+<td>2.66623</td>
+<td>98.0</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>79824.0</td>
+</tr>
+</tbody>
+</table>
+
+</div>
+</div>
+</div>
+</section>
+<section id="exploratory-data-analysis" class="level1">
+<h1>Exploratory Data Analysis</h1>
+<section id="summary-statistics" class="level2">
+<h2 class="anchored" data-anchor-id="summary-statistics">Summary Statistics</h2>
+<div id="deac36ba" class="cell" data-execution_count="2">
+<div class="cell-output cell-output-display" data-execution_count="2">
+<div>
+
+
+<table class="dataframe caption-top table table-sm table-striped small" data-border="1">
+<thead>
+<tr class="header">
+<th data-quarto-table-cell-role="th"></th>
+<th data-quarto-table-cell-role="th">gdp_per_capita</th>
+<th data-quarto-table-cell-role="th">life_expectancy</th>
+<th data-quarto-table-cell-role="th">total_population</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">count</th>
+<td>203.000000</td>
+<td>209.000000</td>
+<td>2.170000e+02</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">mean</th>
+<td>20345.707649</td>
+<td>72.416519</td>
+<td>3.653645e+07</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">std</th>
+<td>31308.942225</td>
+<td>7.713322</td>
+<td>1.410583e+08</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">min</th>
+<td>259.025031</td>
+<td>52.997000</td>
+<td>1.131200e+04</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">25%</th>
+<td>2570.563284</td>
+<td>66.782000</td>
+<td>8.087260e+05</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">50%</th>
+<td>7587.588173</td>
+<td>73.514634</td>
+<td>6.465097e+06</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">75%</th>
+<td>25982.630050</td>
+<td>78.475000</td>
+<td>2.606942e+07</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">max</th>
+<td>240862.182448</td>
+<td>85.377000</td>
+<td>1.417173e+09</td>
+</tr>
+</tbody>
+</table>
+
+</div>
+</div>
+</div>
+<p>Table <a href="#tbl-summary" class="quarto-xref">Table&nbsp;1</a> shows summary statistics of GDP per capita, life expectancy, and population.</p>
+<div class="cell" data-execution_count="3">
+<div id="tbl-summary" class="cell quarto-float quarto-figure quarto-figure-center anchored" data-execution_count="3">
+<figure class="quarto-float quarto-float-tbl figure">
+<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-tbl" id="tbl-summary-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Table&nbsp;1: Summary statistics of selected development indicators
+</figcaption>
+<div aria-describedby="tbl-summary-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="cell-output cell-output-display" data-execution_count="3">
+<div>
+
+
+<table class="dataframe do-not-create-environment cell caption-top table table-sm table-striped small" data-border="1">
+<thead>
+<tr class="header">
+<th data-quarto-table-cell-role="th"></th>
+<th data-quarto-table-cell-role="th">gdp_per_capita</th>
+<th data-quarto-table-cell-role="th">life_expectancy</th>
+<th data-quarto-table-cell-role="th">total_population</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">count</th>
+<td>203.000000</td>
+<td>209.000000</td>
+<td>2.170000e+02</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">mean</th>
+<td>20345.707649</td>
+<td>72.416519</td>
+<td>3.653645e+07</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">std</th>
+<td>31308.942225</td>
+<td>7.713322</td>
+<td>1.410583e+08</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">min</th>
+<td>259.025031</td>
+<td>52.997000</td>
+<td>1.131200e+04</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">25%</th>
+<td>2570.563284</td>
+<td>66.782000</td>
+<td>8.087260e+05</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">50%</th>
+<td>7587.588173</td>
+<td>73.514634</td>
+<td>6.465097e+06</td>
+</tr>
+<tr class="odd">
+<th data-quarto-table-cell-role="th">75%</th>
+<td>25982.630050</td>
+<td>78.475000</td>
+<td>2.606942e+07</td>
+</tr>
+<tr class="even">
+<th data-quarto-table-cell-role="th">max</th>
+<td>240862.182448</td>
+<td>85.377000</td>
+<td>1.417173e+09</td>
+</tr>
+</tbody>
+</table>
+
+</div>
+</div>
+</div>
+</figure>
+</div>
+</div>
+</section>
+<section id="gdp-per-capita-vs-life-expectancy" class="level2">
+<h2 class="anchored" data-anchor-id="gdp-per-capita-vs-life-expectancy">GDP per Capita vs Life Expectancy</h2>
+<p>Figure <a href="#fig-scatter" class="quarto-xref">Figure&nbsp;1</a> shows the relationship between GDP per capita and life expectancy.</p>
+<div id="cell-fig-scatter" class="cell" data-execution_count="4">
+<div class="cell-output cell-output-display">
+<div id="fig-scatter" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-scatter-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="report_files/figure-html/fig-scatter-output-1.png" width="585" height="449" class="figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-scatter-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;1: Relationship between GDP per capita and life expectancy
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</section>
+<section id="top-10-countries-by-population" class="level2">
+<h2 class="anchored" data-anchor-id="top-10-countries-by-population">Top 10 Countries by Population</h2>
+<p>Figure <a href="#fig-bar" class="quarto-xref">Figure&nbsp;2</a> shows the countries with the largest populations.</p>
+<div id="cell-fig-bar" class="cell" data-execution_count="5">
+<div class="cell-output cell-output-display">
+<div id="fig-bar" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-bar-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="report_files/figure-html/fig-bar-output-1.png" width="589" height="535" class="figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-bar-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;2: Top 10 countries by total population
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</section>
+</section>
+<section id="references" class="level1">
+<h1>References</h1>
 </section>
 
 </main>
